# CyberAI

./: .env  .gitignore  Cargo.toml  index.html  leaderboard.db  leaderboard.db-shm  leaderboard.db-wal  package-lock.json  package.json  vite.config.js
assets/css/: game.css
assets/js/: game.js  main.js  phaser-driver.js
assets/ts/: api.ts
migrations/: 20260323135634_init.sql  20260514141954_add_build_history.sql
src/: main.rs
