[package]
name = "cyber-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
